painting service mobile fix

--- a/painting-service.html
+++ b/painting-service.html
@@ -227,7 +227,7 @@
 
       <!-- here started the painting section  -->
       <section
-        class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem]"
+        class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem] pt-12 md:pt-0"
       >
         <div
           class="aspect-[430/450] md:aspect-[1720/702] container-exceptional"
@@ -267,7 +267,7 @@
                 your home.
               </p>
               <div
-                class="text-center md:flex md:gap-2 items-center my-[10.93vw] md:my-0"
+                class="text-center flex justify-center md:justify-start gap-2 items-center my-[10.93vw] md:my-0"
               >
                 <a
                   class="bg-[#FF6D43] py-[4.186vw] px-[4.93vw] md:py-[1.823vw] md:px-[1.979vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
@@ -275,7 +275,8 @@
                 >
                   <img src="./asset/icons/painting_service.png" alt="" />
                 </a>
-                <span class="text-center md:text-[0.833vw] md:leading-[1vw]"
+                <span
+                  class="text-center text-[3.5vw] md:text-[0.833vw] md:leading-[1vw]"
                   >TRY YOUR FAVORITE COLOR</span
                 >
               </div>
@@ -295,7 +296,7 @@
       </section>
       <!-- here ended the painting section  -->
 
-      <!-- service section start  -->
+      <!-- simulation section start  -->
       <section
         class="bg-[#EEECE8] min-h-[35rem] w-full aspect-[1920/900]"
         id="simulation"
@@ -305,11 +306,11 @@
           Simulation
         </h1>
       </section>
-      <!-- service section end -->
+      <!-- simulation section end -->
 
-      <!-- why choose section start  -->
+      <!-- what delivery section start  -->
       <section
-        class="bg-white min-h[41.667vw] w-auto flex flex-col container-exceptional"
+        class="bg-white min-h[41.667vw] w-auto flex flex-col container-exceptional pb-8 md:pb-0"
       >
         <div
           class="md:flex m-auto md:items-center text-center md:gap-[6.667vw]"
@@ -428,10 +429,10 @@
           </div>
         </div>
       </section>
-      <!-- why choose section end -->
+      <!-- what delivery section end -->
 
       <!-- reno work section start  -->
-      <section class="renoWork bg-[#EEECE8] min-h-[] w-full py-12">
+      <section class="renoWork bg-[#EEECE8] min-h-[] w-full py-8 md:py-12">
         <div class="pb-[10.833vw] container-general">
           <div class="mb-[4.167vw]">
             <h1
@@ -461,7 +462,7 @@
       <!-- reno work section end  -->
 
       <!-- color selection section start  -->
-      <section class="colorSelection bg-black py-[4.333vw]">
+      <section class="colorSelection bg-black py-[12vw] md:py-[4.333vw]">
         <div class="container-general mx-auto">
           <div
             class="md:flex gap-[1.875vw] items-center pt-[4.5vw] pb-[4vw] md:py-[2.167vw]"
@@ -491,14 +492,14 @@
           </p>
 
           <div
-            class="flex justify-center items-center gap-[2.708vw] my-[4.323vw]"
+            class="flex flex-col md:flex-row justify-center items-center gap-[4vw] md:gap-[2.708vw] my-[10vw] md:my-[4.323vw]"
           >
             <!-- color 1  -->
             <div
-              class="bg-[#f4d8d1] w-[12.656vw] rounded-md flex items-end pt-[9.115vw]"
+              class="bg-[#f4d8d1] w-[74.656vw] md:w-[12.656vw] rounded-md flex items-end pt-[35.115vw] md:pt-[9.115vw]"
             >
               <div
-                class="bg-black text-white md:text-[0.938vw] font-medium px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
+                class="bg-black text-white text-[5vw] md:text-[0.938vw] font-medium px-[4vw] md:px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
               >
                 Vintage Vase
                 <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
@@ -508,7 +509,7 @@
                     alt="date_pointer_bg"
                   />
                   <p
-                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                    class="text-[3.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
                   >
                     NP R 2386 P
                   </p>
@@ -519,10 +520,10 @@
 
             <!-- color 2  -->
             <div
-              class="bg-[#B6D7E3] w-[12.656vw] rounded-md flex items-end pt-[9.115vw]"
+              class="bg-[#B6D7E3] w-[74.656vw] md:w-[12.656vw] rounded-md flex items-end pt-[35.115vw] md:pt-[9.115vw]"
             >
               <div
-                class="bg-black text-white md:text-[0.938vw] font-medium px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
+                class="bg-black text-white text-[5vw] md:text-[0.938vw] font-medium px-[4vw] md:px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
               >
                 Smooth Sailing
                 <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
@@ -532,7 +533,7 @@
                     alt="date_pointer_bg"
                   />
                   <p
-                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                    class="text-[3.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
                   >
                     NP BGG 1565 P
                   </p>
@@ -543,10 +544,10 @@
 
             <!-- color 3  -->
             <div
-              class="bg-[#93B79C] w-[12.656vw] rounded-md flex items-end pt-[9.115vw]"
+              class="bg-[#93B79C] w-[74.656vw] md:w-[12.656vw] rounded-md flex items-end pt-[35.115vw] md:pt-[9.115vw]"
             >
               <div
-                class="bg-black text-white md:text-[0.938vw] font-medium px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
+                class="bg-black text-white text-[5vw] md:text-[0.938vw] font-medium px-[4vw] md:px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
               >
                 Jasper Green
                 <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
@@ -556,7 +557,7 @@
                     alt="date_pointer_bg"
                   />
                   <p
-                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                    class="text-[3.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
                   >
                     NP BGG 1801 T
                   </p>
@@ -567,10 +568,10 @@
 
             <!-- color 4  -->
             <div
-              class="bg-[#FEC680] w-[12.656vw] rounded-md flex items-end pt-[9.115vw]"
+              class="bg-[#FEC680] w-[74.656vw] md:w-[12.656vw] rounded-md flex items-end pt-[35.115vw] md:pt-[9.115vw]"
             >
               <div
-                class="bg-black text-white md:text-[0.938vw] font-medium px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
+                class="bg-black text-white text-[5vw] md:text-[0.938vw] font-medium px-[4vw] md:px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
               >
                 Sun's Enchantment
                 <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
@@ -580,7 +581,7 @@
                     alt="date_pointer_bg"
                   />
                   <p
-                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                    class="text-[3.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
                   >
                     NP YO 1182 T
                   </p>
@@ -631,7 +632,7 @@
 
       <!-- free quote section start here  -->
       <section class="container-exceptional md:flex justify-between">
-        <div class="flex items-center md:w-[41.667vw]">
+        <div class="flex items-center md:w-[41.667vw] pt-[8vw] md:pt-0">
           <div
             class="bg-[#fff] md:flex md:flex-col md:gap-y-[2.656vw] md:w-[41.667vw]"
           >
@@ -844,7 +845,7 @@
       <!-- blog section end -->
 
       <!-- contact us section start  -->
-      <section class="bg-white container-general py-[5.833vw]">
+      <section class="bg-white container-general py-[10.465vw] md:py-[5.833vw]">
         <div>
           <div
             class="flex flex-col md:flex-row gap-[1.875vw] mb-[2.656vw] justify-start items-center"
@@ -868,12 +869,12 @@
             </span>
             <div>
               <h1
-                class="text-[#291E18] text-center md:text-left not-italic text-[6.512vw] md:text-[2.24vw] font-normal md:leading-[52px] leading-7"
+                class="text-[#291E18] text-center md:text-left not-italic text-[6.512vw] md:text-[2.24vw] font-normal md:leading-[52px] leading-[7.814vw] pb-[1.86vw] md:pb-0"
               >
                 Contact us
               </h1>
               <p
-                class="text-[#291E18] md:w-[30vw] text-[3.256vw] md:text-base font-normal md:leading-6 leading-3 tracking-normal text-center md:text-left pt-1"
+                class="text-[#291E18] md:w-[30vw] text-[3.256vw] md:text-base font-normal md:leading-6 leading-3 tracking-normal text-center md:text-left pt-1 pb-[4.651vw] md:pb-0"
               >
                 We will call you back within 30 minutes.
               </p>
@@ -885,14 +886,14 @@
 
           <form>
             <div
-              class="md:mb-[1.042vw] flex flex-col md:flex-row gap-[3.023vw] md:gap-[0.625vw]"
+              class="md:mb-[1.042vw] flex flex-col md:flex-row gap-[3.023vw] md:gap-[0.625vw] px-[2.326vw] md:px-0"
             >
               <input
                 type="email"
                 name="email"
                 id="email"
                 placeholder="Your E-mail *"
-                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] mx-[2.326vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
+                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
               />
 
               <input
@@ -900,16 +901,16 @@
                 name="number"
                 id="number"
                 placeholder="Your phone number *"
-                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] mx-[2.326vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
+                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
               />
             </div>
-            <div class="md:mb-[1.042vw]">
+            <div class="md:mb-[1.042vw] px-[2.326vw] md:px-0">
               <textarea
                 rows="4"
                 name="message"
                 id="message"
                 placeholder="Conversation subject *"
-                class="w-full resize-none border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] mx-[2.326vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md mt-4 md:mt-0"
+                class="w-full resize-none border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md mt-4 md:mt-0"
               ></textarea>
             </div>
             <div
@@ -917,34 +918,49 @@
             >
               <input
                 type="checkbox"
-                class="before:content[''] peer relative h-5 w-5 cursor-pointer appearance-none rounded-md border border-blue-gray-200 transition-all before:absolute before:top-2/4 before:left-2/4 before:block before:h-12 before:w-12 before:-translate-y-2/4 before:-translate-x-2/4 before:rounded-full before:bg-blue-gray-500 before:opacity-0 before:transition-opacity checked:border-[#FF6D43] checked:bg-[#FF6D43] checked:before:bg-[#FF6D43] hover:before:opacity-10"
+                class="before:content[''] peer relative h-4 w-5 md:h-5 md:w-5 cursor-pointer appearance-none rounded-md border border-blue-gray-200 transition-all before:absolute before:top-2/4 before:left-2/4 before:block before:h-12 before:w-12 before:-translate-y-2/4 before:-translate-x-2/4 before:rounded-full before:bg-blue-gray-500 before:opacity-0 before:transition-opacity checked:border-[#FF6D43] checked:bg-[#FF6D43] checked:before:bg-[#FF6D43] hover:before:opacity-10"
                 id="checkbox"
               />
               <p
-                class="text-[2.791vw] md:text-[0.833vw] font-normal leading-5 sm:leading-3 tracking-normal text-left"
+                class="text-[2.791vw] md:text-[0.833vw] font-normal md:leading-[1vw] leading-[3.349vw] tracking-normal text-left"
               >
                 By sending a message, I agree to
                 <span class="text-[#FF6D43]"> the privacy policy </span>and
                 accept it.
               </p>
             </div>
+
             <div>
               <a
-                class="bg-[#FF6D43] py[4.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer flex items-center md:w-[39.063vw] mx-[10.233vw] md:mx-0"
+                class="bg-[#FF6D43] py[14.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] leading-[4.651vw] rounded-full cursor-pointer flex items-center justify-between md:w-[39.063vw] mx-[10.233vw] md:mx-0 h-[12.791vw] md:h-[2.865vw]"
               >
                 <span>Drop a message</span>
 
                 <svg
-                  class="ml-[1.042vw]"
-                  width="44"
+                  class="hidden md:block"
+                  width="273"
                   height="7"
-                  viewBox="0 0 54 7"
+                  viewBox="0 0 273 7"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <path
-                    d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
-                    fill="#EEECE8"
+                    d="M268.5 2.525V0L273 3.03L268.5 6.06V3.535H0V2.525H268.5Z"
+                    fill="white"
+                  />
+                </svg>
+
+                <svg
+                  class="ml-[5.042vw] block md:hidden"
+                  width="126"
+                  height="7"
+                  viewBox="0 0 126 7"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M123.152 2.525V0L125.216 3.03L123.152 6.06V3.535H0V2.525H123.152Z"
+                    fill="white"
                   />
                 </svg>
               </a>
@@ -1006,7 +1022,9 @@
                   Services
                 </span>
               </div>
-              <a class="text-[#EEECE8] block mb-1 text-[1.042vw]" href="#"
+              <a
+                class="text-[#EEECE8] block mb-1 text-[1.042vw]"
+                href="./painting-service.html"
                 >Painting</a
               >
               <a class="text-[#EEECE8] block mb-1 text-[1.042vw]" href="#"
@@ -1042,7 +1060,9 @@
             </div>
           </div>
         </div>
-        <div class="w-full bg-[#D9D9D9] h-[0.003vw] mt-[8.333vw]"></div>
+        <div
+          class="w-full bg-[#D9D9D9] bg-opacity-30 h-[0.003vw] mt-[8.333vw]"
+        ></div>
         <div
           class="grid grid-cols-4 lg:w-[85%] md:w-[95%] mx-auto py-[2.083vw]"
         >
@@ -1086,7 +1106,7 @@
 
       <footer class="bg-black w-full box-border pt-[13.953vw] block md:hidden">
         <div
-          class="flex flex-col items-center justify-center border-[#BEB8AE] border-b-[0.1rem] pb-[9.535vw]"
+          class="flex flex-col items-center justify-center border-[#BEB8AE] border-opacity-30 border-b-[0.1rem] pb-[9.535vw]"
         >
           <div
             class="flex items-center border justify-center rounded-full cursor-pointer mb-[8.14vw]"
