--- a/painting-service.html
+++ b/painting-service.html
@@ -285,8 +285,9 @@
               class="h-full flex w-full md:w-[55.2%] justify-end items-center"
             >
               <img
-                class=""
-                src="/asset/img/paint_img2.png"
+                class="lazy"
+                src="/asset/img/service_electrical.png"
+                data-src="./asset/img/paint_img2.png"
                 alt="paint image"
                 srcset=""
               />
