--- a/painting-service.html
+++ b/painting-service.html
@@ -286,8 +286,8 @@
             >
               <img
                 class="lazy"
-                src="/asset/img/service_electrical.png"
-                data-src="./asset/img/paint_img2.png"
+                src="/asset/img/paint_img2.png"
+                data-src="./asset/img/"
                 alt="paint image"
                 srcset=""
               />
