--- a/index.html
+++ b/index.html
@@ -2552,8 +2552,8 @@
         >
           <img
             class="w-[62.093vw] aspect-[267/374] md:w-[26.458vw] md:h-full lazy"
-            src="./asset/img/paint_img2.png"
-            data-src="./asset/img/MDL 1.png"
+            src="./asset/img/MDL 1.png"
+            data-src="./asset/img/"
             alt="man image"
           />
         </div>
