mobile menu fix in painting service

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <li
                       class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
                     >
-                      <a href="#">Flooring</a>
+                      <a href="./flooring-services.html">Flooring</a>
                     </li>
                     <li
                       class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
@@ -269,7 +269,7 @@
                       >Masonary</a
                     >
                     <a
-                      href="#"
+                      href="./flooring-services.html"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       >Flooring</a
                     >
