--- a/painting-service.html
+++ b/painting-service.html
@@ -80,7 +80,7 @@
                     <li
                       class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
                     >
-                      <a href="#">Flooring</a>
+                      <a href="./flooring-services.html">Flooring</a>
                     </li>
                     <li
                       class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
@@ -133,7 +133,7 @@
         <!-- desktop navbar ended here  -->
 
         <!-- Mobile navbar started  -->
-        <nav class="md:hidden w-[100vw] aspect-[430/77]">
+        <nav class="md:hidden w-full aspect-[430/77]">
           <div class="flex items-center justify-between h-full px-[2.083vw]">
             <a href="/">
               <img class="w-[33.86vw]" src="asset/img/reno_logo.png" alt="" />
@@ -169,7 +169,7 @@
                   <button
                     class="menu-trigger flex items-center justify-between w-full px-4 py-2 text-sm font-medium text-gray-700 bg-gray-100 border border-gray-200 rounded-md focus:outline-none focus:border-blue-500"
                   >
-                    <span>Menu Item 1</span>
+                    <span>Services</span>
                     <!-- Icon for indicating open/close state -->
                     <svg
                       class="menu-icon w-4 h-4 fill-current"
@@ -197,19 +197,34 @@
                     style="display: none"
                   >
                     <a
-                      href="#"
+                      href="./painting-service.html"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
-                      >Submenu Item 1</a
+                      >Painting</a
                     >
                     <a
                       href="#"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
-                      >Submenu Item 2</a
+                      >Demolition</a
                     >
                     <a
                       href="#"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
-                      >Submenu Item 3</a
+                      >Masonary</a
+                    >
+                    <a
+                      href="./flooring-services.html"
+                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                      >Flooring</a
+                    >
+                    <a
+                      href="#"
+                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                      >Wall Partition & Celling</a
+                    >
+                    <a
+                      href="#"
+                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                      >Electrical & Plumbing</a
                     >
                   </div>
                 </div>
