all services page added

--- a/index.html
+++ b/index.html
@@ -2898,18 +2898,18 @@
           class="flex flex-col gap-3 justify-center items-center container-general"
         >
           <h1
-            class="text-white text-[7.907vw] md:text-6xl font-normal text-center md:text-left md:leading-7 leading-[9.488vw]"
+            class="text-white text-[7.907vw] md:text-[3.125vw] font-normal text-center md:text-left md:leading-[1.458vw] leading-[9.488vw] z-10"
           >
             Ready to renovate your home?
           </h1>
           <p
-            class="text-white text-[3.256vw] md:text-lg font-normal pt-[3.512vw] pb-[11.163vw] px-[5.116vw] md:pt-[1.4vw] md:pb-[1.927vw] md:px-0 leading-[3.907vw] md:leading-[1.125vw] md:w-[35.521vw] text-center"
+            class="text-white text-[3.256vw] md:text-[0.938vw] font-normal pt-[3.512vw] pb-[11.163vw] px-[5.116vw] md:pt-[1.4vw] md:pb-[1.927vw] md:px-0 leading-[3.907vw] md:leading-[1.125vw] md:w-[35.521vw] text-center z-10"
           >
             Drop us a line to discuss how Renoexpert can help you to organize
             your dream Home.
           </p>
           <a
-            class="bg-[#FF6D43] py-[4.186vw] px-[10.93vw] md:py-[0.938vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
+            class="bg-[#FF6D43] py-[4.186vw] px-[10.93vw] md:py-[0.938vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center z-10"
           >
             <span>Make a free quote</span>
 
