--- a/masonary-services.html
+++ b/masonary-services.html
@@ -248,13 +248,49 @@
       <section
         class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem] pt-12 md:pt-0"
       >
-        <div
-          class="aspect-[430/450] md:aspect-[1720/702] container-exceptional"
-        >
-          <div
-            class="flex flex-col md:flex-row md:h-full md:w-full items-center justify-center md:justify-between"
-          >
-            <!-- new content add here  -->
+        <div class="aspect-[430/450] md:aspect-[1920/800] w-full">
+          <div class="hero-img w-full h-full relative">
+            <img
+              class="w-full h-full"
+              src="./asset/img/flooring_hero_img.png"
+              alt="flooring-services"
+            />
+            <!-- Overlay div -->
+            <div
+              class="w-full h-full overlay-bg top-0 bottom-0 left-0 right-0 absolute z-10"
+            ></div>
+
+            <!-- Content -->
+            <div
+              class="absolute top-[38%] left-[10.417vw] text-white text-left z-20 overflow-hidden max-w-[30vw]"
+            >
+              <h1 class="text-[2.5vw] leading-[3vw] font-bold text-[#EEECE8]">
+                Flooring
+              </h1>
+              <p
+                class="text-[0.938vw] text-left leading-[1.458vw] text-[#EEECE8] pb-[2.813vw] pt-[1.042vw]"
+              >
+                Our experts guide you through a range of materials and styles,
+                ensuring a floor that not only meets your needs but exceeds your
+                expectations.
+              </p>
+
+              <div
+                class="text-center flex justify-center md:justify-start gap-[1.094vw] items-center my-[10.93vw] md:my-0"
+              >
+                <a
+                  class="bg-[#FF6D43] py-[4.186vw] px-[4.93vw] md:py-[1.823vw] md:px-[1.979vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
+                  href="#projects"
+                >
+                  <img src="./asset/icons/painting_service.png" alt="" />
+                </a>
+                <span
+                  class="text-center text-[3.5vw] md:text-[0.833vw] md:leading-[1vw]"
+                >
+                  PROJECTS
+                </span>
+              </div>
+            </div>
           </div>
         </div>
       </section>
