--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                     <li
                       class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
                     >
-                      <a href="#">Demolition</a>
+                      <a href="./demolition-services.html">Demolition</a>
                     </li>
                     <li
                       class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
                     >
-                      <a href="#">Masonary</a>
+                      <a href="./masonary-services.html">Masonary</a>
                     </li>
                     <li
                       class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
@@ -85,12 +85,16 @@
                     <li
                       class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
                     >
-                      <a href="#">Wall Partition & Ceiling</a>
+                      <a href="./wall-partition-ceiling-services.html"
+                        >Wall Partition & Ceiling</a
+                      >
                     </li>
                     <li
                       class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
                     >
-                      <a href="#">Electrical & Plumbing</a>
+                      <a href="./electrical-plumbing-services.html"
+                        >Electrical & Plumbing</a
+                      >
                     </li>
                     <!-- <li class="rounded-sm relative px-3 py-1 hover:bg-gray-100">
                       <button
@@ -259,12 +263,12 @@
                       >Painting</a
                     >
                     <a
-                      href="#"
+                      href="./demolition-services.html"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       >Demolition</a
                     >
                     <a
-                      href="#"
+                      href="./masonary-services.html"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       >Masonary</a
                     >
@@ -274,12 +278,12 @@
                       >Flooring</a
                     >
                     <a
-                      href="#"
+                      href="./wall-partition-ceiling-services.html"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       >Wall Partition & Celling</a
                     >
                     <a
-                      href="#"
+                      href="./electrical-plumbing-services.html"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       >Electrical & Plumbing</a
                     >
