flooring project section add

--- a/flooring-services.html
+++ b/flooring-services.html
@@ -1862,7 +1862,72 @@
       <!-- google review section end -->
 
       <!-- project section here start  -->
-      <div id="projects"></div>
+      <div class="w-full bg-black" id="projects">
+        <div class="overflow-hidden text-center py-[8.594vw] px-[30.208vw]">
+          <h2
+            class="text-[5vw] md:text-[2.292vw] text-[#EEECE8] font-bold mb-4 leading-[4vw] md:leading-[2.7vw]"
+          >
+            OUR PROJECTS
+          </h2>
+          <p class="mb-8 text-[#EEECE8]">
+            We released more than 150 commercial and private projects all around
+            the world, providing our clients with custom solutions in stylish,
+            functional, and well-thought-out designs.
+          </p>
+        </div>
+
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-center items-center px-[2.083vw]"
+        >
+          <div class="w-full cursor-pointer relative outer-div">
+            <div class="overlay"></div>
+            <img
+              src="./asset/img/flooring_project_img1.png"
+              alt="Allurei Manson SG"
+              class="w-full"
+            />
+            <div class="absolute bottom-10 left-10 md:opacity-0 inner-div">
+              <p
+                class="text-[5vw] md:text-[2.292vw] text-[#fff] leading-[4vw] md:leading-[2.7vw]"
+              >
+                Allurei Manson SG
+              </p>
+              <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
+                <p
+                  class="text-[2.326vw] md:text-[0.677vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#fff]"
+                >
+                  Midney State 7440
+                </p>
+
+                <img
+                  class="img-fluid"
+                  src="./asset/img/date_pointer_bg.png"
+                  alt="date_pointer_bg"
+                />
+                <p
+                  class="text-[2.326vw] md:text-[0.677vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                >
+                  24 December 2023
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="w-full cursor-pointer">
+            <img
+              src="./asset/img/flooring_project_img2.png"
+              alt="Project Image"
+              class="w-full"
+            />
+          </div>
+          <div class="col-span-2 w-full cursor-pointer">
+            <img
+              src="./asset/img/flooring_project_img3.png"
+              alt="Project Image"
+              class="w-full"
+            />
+          </div>
+        </div>
+      </div>
 
       <!-- project section here end -->
 
