project page add & project section add

--- a/masonary-services.html
+++ b/masonary-services.html
@@ -108,7 +108,9 @@
                 >
               </li>
               <li class="cursor-pointer">
-                <a class="text-[#291E18] text-[0.833vw]" href="#">Products</a>
+                <a class="text-[#291E18] text-[0.833vw]" href="projects.html"
+                  >Projects</a
+                >
               </li>
             </ul>
           </div>
@@ -252,7 +254,7 @@
           <div class="hero-img w-full h-full relative">
             <img
               class="w-full h-full"
-              src="./asset/img/flooring_hero_img.png"
+              src="./asset/img/masonary_service_img.jpg"
               alt="flooring-services"
             />
             <!-- Overlay div -->
@@ -264,15 +266,12 @@
             <div
               class="absolute top-[38%] left-[10.417vw] text-white text-left z-20 overflow-hidden max-w-[30vw]"
             >
-              <h1 class="text-[2.5vw] leading-[3vw] font-bold text-[#EEECE8]">
-                Flooring
-              </h1>
+              <h1 class="text-[2.5vw] leading-[3vw] text-[#EEECE8]">Masonry</h1>
               <p
                 class="text-[0.938vw] text-left leading-[1.458vw] text-[#EEECE8] pb-[2.813vw] pt-[1.042vw]"
               >
-                Our experts guide you through a range of materials and styles,
-                ensuring a floor that not only meets your needs but exceeds your
-                expectations.
+                Our skilled artisans combine expertise with creativity, bringing
+                solid foundations and artful creations to your home.
               </p>
 
               <div
@@ -1862,6 +1861,72 @@
       <!-- google review section end -->
 
       <!-- project section here start  -->
+      <div class="w-full bg-black" id="projects">
+        <div class="overflow-hidden text-center py-[8.594vw] px-[30.208vw]">
+          <h2
+            class="text-[5vw] md:text-[2.292vw] text-[#EEECE8] font-bold mb-4 leading-[4vw] md:leading-[2.7vw]"
+          >
+            OUR PROJECTS
+          </h2>
+          <p class="mb-8 text-[#EEECE8]">
+            We released more than 150 commercial and private projects all around
+            the world, providing our clients with custom solutions in stylish,
+            functional, and well-thought-out designs.
+          </p>
+        </div>
+
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-center items-center px-[2.083vw]"
+        >
+          <div class="w-full cursor-pointer relative outer-div">
+            <div class="overlay"></div>
+            <img
+              src="./asset/img/flooring_project_img1.png"
+              alt="Allurei Manson SG"
+              class="w-full"
+            />
+            <div class="absolute bottom-10 left-10 md:opacity-0 inner-div">
+              <p
+                class="text-[5vw] md:text-[2.292vw] text-[#fff] leading-[4vw] md:leading-[2.7vw]"
+              >
+                Allurei Manson SG
+              </p>
+              <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
+                <p
+                  class="text-[2.326vw] md:text-[0.677vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#fff]"
+                >
+                  Midney State 7440
+                </p>
+
+                <img
+                  class="img-fluid"
+                  src="./asset/img/date_pointer_bg.png"
+                  alt="date_pointer_bg"
+                />
+                <p
+                  class="text-[2.326vw] md:text-[0.677vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                >
+                  24 December 2023
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="w-full cursor-pointer">
+            <img
+              src="./asset/img/flooring_project_img2.png"
+              alt="Project Image"
+              class="w-full"
+            />
+          </div>
+          <div class="col-span-2 w-full cursor-pointer">
+            <img
+              src="./asset/img/flooring_project_img3.png"
+              alt="Project Image"
+              class="w-full"
+            />
+          </div>
+        </div>
+      </div>
 
       <!-- project section here end -->
 
