--- a/flooring-services.html
+++ b/flooring-services.html
@@ -108,7 +108,9 @@
                 >
               </li>
               <li class="cursor-pointer">
-                <a class="text-[#291E18] text-[0.833vw]" href="#">Products</a>
+                <a class="text-[#291E18] text-[0.833vw]" href="projects.html"
+                  >Projects</a
+                >
               </li>
             </ul>
           </div>
@@ -264,7 +266,7 @@
             <div
               class="absolute top-[38%] left-[10.417vw] text-white text-left z-20 overflow-hidden max-w-[30vw]"
             >
-              <h1 class="text-[2.5vw] leading-[3vw] font-bold text-[#EEECE8]">
+              <h1 class="text-[2.5vw] leading-[3vw] text-[#EEECE8]">
                 Flooring
               </h1>
               <p
